# AI-Interview-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai/: answer_evaluator.py  interview_generator.py  llm_resume_analyzer.py  resume_analyzer.py
backend/app/db/: database.py  session.py
backend/app/models/: interview_session.py  resume.py  users.py
backend/app/routes/: analytics.py  auth.py  interview.py  resume.py  user.py
backend/app/schemas/: user.py
backend/app/utils/: dependencies.py  security.py
frontend/: package-lock.json
frontend/src/app/dashboard/: page.js
frontend/src/app/login/: page.js
frontend/src/app/register/: page.js
frontend/src/app/upload/: page.js
prepai-frontend/interview-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
prepai-frontend/interview-app/src/: App.jsx
prepai-frontend/interview-app/src/services/: api.js
